add meta header setting

--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -36,7 +36,7 @@
             path=entry_path
             sizes = "200px"
             class="preview z-depth-1 rounded"
-            zoomable=true
+            zoomable=false
             alt=entry.preview
           %}
         {% endif %}
