--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -51,7 +51,7 @@ layout: default
     <!-- Upcoming Presentations -->
     {% if page.talks and site.announcements.enabled %}
       <h2>
-        <a href="{{ '/talks/' | relative_url }}" style="color: inherit">upcoming presentations</a>
+        <a href="{{ '/talks/' | relative_url }}" style="color: inherit">recent presentations</a>
       </h2>
       {% include talks.liquid limit=true %}
     {% endif %}
@@ -67,7 +67,7 @@ layout: default
     <!-- Selected papers -->
     {% if page.selected_papers %}
       <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected papers</a>
+        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected works</a>
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
