--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -30,11 +30,13 @@
           <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
         {% else %}
           {% assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' %}
+          {% capture sizes %}(min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 576px)
+          30vw, 60vw"{% endcapture %}
           {%
             include figure.liquid
             loading="eager"
             path=entry_path
-            sizes = "200px"
+            sizes = sizes
             class="preview z-depth-1 rounded"
             zoomable=true
             alt=entry.preview
