--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -38,7 +38,7 @@
             path=entry_path
             sizes = sizes
             class="preview z-depth-1 rounded"
-            zoomable=true
+            zoomable=false
             alt=entry.preview
           %}
         {% endif %}
