--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -8,12 +8,12 @@
           {% assign venue_style = null %}
           {% if site.data.venues[entry.abbr].color != blank %}
             {% assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' %}
-          {%- endif -%}
+          {%- endif %}
           <abbr
             class="badge rounded w-100"
             {% if venue_style %}
               {{ venue_style }}
-            {% endif -%}
+            {% endif %}
           >
             {% if site.data.venues[entry.abbr].url %}
               <a href="{{ site.data.venues[entry.abbr].url }}">{{ entry.abbr }}</a>
@@ -30,13 +30,12 @@
           <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
         {% else %}
           {% assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' %}
-          {% capture sizes %}(min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3}}px, (min-width: 576px)
-          30vw, 60vw"{% endcapture %}
+          {% capture sizes %}(min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3 }}px, (min-width: 576px) 30vw, 60vw{% endcapture %}
           {%
             include figure.liquid
             loading="eager"
             path=entry_path
-            sizes = sizes
+            sizes=sizes
             class="preview z-depth-1 rounded"
             zoomable=false
             alt=entry.preview
