edit2 bib.liquid

--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -31,6 +31,11 @@
         {% else %}
           {% assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' %}
           {% capture sizes %}(min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3 }}px, (min-width: 576px) 30vw, 60vw{% endcapture %}
+            {% capture widths %}
+              (min-width: {{ site.max_width }}) 100%, 
+              (min-width: 576px) 100%, 
+              (max-width: 575px) 60%
+            {% endcapture %}
           {%
             include figure.liquid
             loading="eager"
