--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -41,6 +41,7 @@
             loading="eager"
             path=entry_path
             sizes=sizes
+            width=widths
             class="preview z-depth-1 rounded"
             zoomable=false
             alt=entry.preview
