--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -30,7 +30,7 @@
           <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
         {% else %}
           {% assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' %}
-            {% capture widths %}
+            {% capture width %}
               (min-width: {{ site.max_width }}) 100%, 
               (min-width: 576px) 100%, 
               (max-width: 575px) 60%
@@ -39,7 +39,8 @@
             include figure.liquid
             loading="eager"
             path=entry_path
-            width=widths
+            sizes = "200px"
+            width=width
             class="preview z-depth-1 rounded"
             zoomable=false
             alt=entry.preview
