--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -29,18 +29,18 @@
         {% if entry.preview contains '://' %}
           <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
         {% else %}
-          {% assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' %}
+          {% comment %} {% assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' %}
             {% capture width %}
               (min-width: {{ site.max_width }}) 100%, 
               (min-width: 576px) 100%, 
               (max-width: 575px) 60%
-            {% endcapture %}
+            {% endcapture %} {% endcomment %}
           {%
             include figure.liquid
             loading="eager"
             path=entry_path
             sizes = "200px"
-            width=width
+            {% comment %} width=width {% endcomment %}
             class="preview z-depth-1 rounded"
             zoomable=false
             alt=entry.preview
