--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -8,12 +8,12 @@
           {% assign venue_style = null %}
           {% if site.data.venues[entry.abbr].color != blank %}
             {% assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' %}
-          {%- endif %}
+          {%- endif -%}
           <abbr
             class="badge rounded w-100"
             {% if venue_style %}
               {{ venue_style }}
-            {% endif %}
+            {% endif -%}
           >
             {% if site.data.venues[entry.abbr].url %}
               <a href="{{ site.data.venues[entry.abbr].url }}">{{ entry.abbr }}</a>
@@ -29,11 +29,12 @@
         {% if entry.preview contains '://' %}
           <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
         {% else %}
+          {% assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' %}
           {%
             include figure.liquid
             loading="eager"
             path=entry_path
-            sizes = "200px"
+            sizes = "100px"
             class="preview z-depth-1 rounded"
             zoomable=false
             alt=entry.preview
