--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -32,14 +32,15 @@
           {% assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' %}
           {% capture width %}
             (min-width: {{ site.max_width }}) 100%, 
-            (min-width: 576px) 100%,
+            (min-width: 925px and max-width: {{ site.max_width | minus: 1 }}) 100%, 
+            (min-width: 576px and max-width: 924px) {{ (site.max_width | minus: 30) | times: 0.3 }}px,
             (max-width: 575px) 60%
           {% endcapture %}
           {%
             include figure.liquid
             loading="eager"
             path=entry_path
-            sizes = "150px"
+            sizes = "130px"
             width=width
             class="preview z-depth-1 rounded"
             zoomable=false
