--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -74,7 +74,7 @@ layout: default
     <!-- Selected papers -->
     {% if page.selected_papers %}
       <h2>
-        <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected works</a>
+        selected works</a>
       </h2>
       {% include selected_papers.liquid %}
     {% endif %}
