--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -41,6 +41,7 @@
             loading="eager"
             path=entry_path
             width=width
+            sizes = "130px"
             class="preview z-depth-1 rounded"
             zoomable=false
             alt=entry.preview
