--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -34,7 +34,7 @@
             (min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3 }}px, 
             (min-width: 925px and max-width: {{ site.max_width | minus: 1 }}) 100%, 
             (min-width: 576px and max-width: 924px) 30vw, 
-            (max-width: 575px) 25vw
+            (max-width: 575px) 130px
           {% endcapture %}
           {%
             include figure.liquid
