--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -39,6 +39,7 @@
             loading="eager"
             path=entry_path
             sizes=sizes
+            width="auto"
             class="preview z-depth-1 rounded"
             zoomable=false
             alt=entry.preview
