--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -30,16 +30,18 @@
           <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
         {% else %}
           {% assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' %}
-          {% capture sizes %}
-            (min-width: {{ site.max_width }}) {{ site.max_width | minus: 30 | times: 0.3}}px,
-            (min-width: 576px) 30vw, 5vw"
+          {% capture width %}
+            (min-width: {{ site.max_width }}) 100%, 
+            (min-width: 925px and max-width: {{ site.max_width | minus: 1 }}) 100%, 
+            (min-width: 576px and max-width: 924px) calc(100% - ((100% - 60%) * ((924px - 100vw) / (924px - 576px)))),
+            (max-width: 575px) 60%
           {% endcapture %}
           {%
             include figure.liquid
             loading="eager"
             path=entry_path
-            sizes=sizes
-            size = "130vw"
+            width=width
+            sizes = "130px"
             class="preview z-depth-1 rounded"
             zoomable=false
             alt=entry.preview
